--- a/clothing-app/src/index.css
+++ b/clothing-app/src/index.css
@@ -3,5 +3,11 @@
 @tailwind utilities;
 
 .image{
-    background-image: url("./assets/images/login-image.jpg");
+    background-image: url(./assets/images/login-image.jpg);
+    /* object-fit: cover; */
+   background-size:contain;
+   /* background-position: center; */
+   /* background-repeat: no-repeat; */
+   /* width: 100%;
+   height: auto; */
 }
